--- a/master.html
+++ b/master.html
@@ -53,28 +53,21 @@
         </div>
 
 
-        <section class="section-1">
-            <div class="container">
-                <div class="row">
-                    <div class="profile-row">
-                        <div class="profile-col-1">
-                            <h5> THIS IS ME</h5>
-                            <h1> ISMET SARI</h1>
-                            <p>You will begin to realise why this exercise is called the Dickens Pattern with reference to the ghost showing Scrooge some different futures.</p>
-                            <button type= "button">
-                                Let's Talk
-                            </button>
-                        </div> 
-    
-                        <div class="profile-col-2">
-                            <img src="profile_image.png" class="controller">
-                        </img>
-                        </div>
-                        
-                </div>
-                </div>
+        <div class="profile-row">
+            <div class="profile-col-1">
+                <h5> THIS IS ME</h5>
+                <h1> ISMET SARI</h1>
+                <p>You will begin to realise why this exercise is called the Dickens Pattern with reference to the ghost showing Scrooge some different futures.</p>
+                <button type= "button">
+                    Let's Talk
+                </button>
+            </div> 
+
+            <div class="profile-col-2">
+                <img src="2.png" class="controller">
+            </img>
             </div>
-        </section>
+        </div>
     </header>
 
  
