adding cards and scroll animations

--- a/master.html
+++ b/master.html
@@ -10,7 +10,7 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="master_style.css">
 </head>
 
@@ -35,17 +35,8 @@
                         <li class="nav-item dropdown">
                             <div class="dropdown">
                                 <a href="#services" class="nav-link">Services</a>
-                                <div class="dropdown-content"> <a href="#">koltuk-doseme</a>
-                                    <a href="#">tul-perde</a></div>
-
-
                             </div>
-                        <li class="nav-item">
-                            <a href="../login/index.html" target="_blank" class="nav-link">Login</a>
                         </li>
-
-                        </li>
-                        <li class="nav-item"></li>
                         </li>
                     </ul>
                 </div>
@@ -68,8 +59,72 @@
             </img>
             </div>
         </div>
-    </header>
 
+        <div class="container" data-aos="fade-right">
+            <div class="card-post">
+                <div class="card-post-img">
+                    <img src="obss.jpg" alt="">
+                    </img>
+                </div>
+                <div class="card-post-info">
+                    <div class="card-post-date">
+                        <span>Start : 01.07.2019</span>
+                        <span>End : 19.08.2019</span>
+                    </div>
+                    <h1 class="card-post-title">
+                        Shark Sighting
+                    </h1>
+                    <p class= card-post-text>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container" data-aos="fade-left">
+            <div class="card-post">
+                <div class="card-post-img">
+                    <img src="obss.jpg" alt="">
+                    </img>
+                </div>
+                <div class="card-post-info">
+                    <div class="card-post-date">
+                        <span>Start : 01.07.2019</span>
+                        <span>End : 19.08.2019</span>
+                    </div>
+                    <h1 class="card-post-title">
+                        Shark Sighting
+                    </h1>
+                    <p class= card-post-text>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container" data-aos="fade-right">
+            <div class="card-post">
+                <div class="card-post-img">
+                    <img src="obss.jpg" alt="">
+                    </img>
+                </div>
+                <div class="card-post-info">
+                    <div class="card-post-date">
+                        <span>Start : 01.07.2019</span>
+                        <span>End : 19.08.2019</span>
+                    </div>
+                    <h1 class="card-post-title">
+                        Shark Sighting
+                    </h1>
+                    <p class= card-post-text>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
+                </div>
+            </div>
+        </div>
+        
+        
+    </header>
  
 
         <script
@@ -90,6 +145,10 @@
         </script>
         <script>
             var scroll = new SmoothScroll('a[href*="#"]');
+        </script>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+          AOS.init();
         </script>
 </body>
 
