--- a/master.html
+++ b/master.html
@@ -230,8 +230,8 @@
             
         </div>
 
-        <div class="container" data-aos="fade-right">
-            <div class="card-post">
+        <div class="container">
+            <div class="card-post" data-aos="fade-up">
                 <div class="card-post-img">
                     <img src="intertech.png" alt="">
                     </img>
@@ -252,8 +252,8 @@
             </div>
         </div>
 
-        <div class="container" data-aos="fade-left">
-            <div class="card-post">
+        <div class="container">
+            <div class="card-post" data-aos="fade-up">
                 <div class="card-post-img">
                     <img src="obss.jpg" alt="">
                     </img>
@@ -278,8 +278,8 @@
             </div>
         </div>
 
-        <div class="container" data-aos="fade-right">
-            <div class="card-post">
+        <div class="container">
+            <div class="card-post" data-aos="fade-up">
                 <div class="card-post-img">
                     <img src="intertech.png" alt="">
                     </img>
@@ -301,8 +301,8 @@
             </div>
         </div>
 
-        <div class="container" data-aos="fade-left">
-            <div class="card-post">
+        <div class="container">
+            <div class="card-post" data-aos="fade-up">
                 <div class="card-post-img">
                     <img src="d.png" alt="">
                     </img>
@@ -399,11 +399,6 @@
             src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
             crossorigin="anonymous">
-        </script>
-        <script src="./family/smooth-scroll.js">
-        </script>
-        <script>
-            var scroll = new SmoothScroll('a[href*="#"]');
         </script>
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <script>
