--- a/master.html
+++ b/master.html
@@ -79,7 +79,7 @@
                 <h1> ISMET SARI</h1>
                 <p>You will begin to realise why this exercise is called the Dickens Pattern with reference to the ghost showing Scrooge some different futures.</p>
                 <div class="header-buttons">
-                    <button onclick="window.location.href = 'http://localhost:8081/chat.html'" type= "button">
+                    <button onclick="window.location.href = 'http://ismetsari.ml/chat.html'" type= "button">
                         Let's Talk
                     </button>
                     
