--- a/master.html
+++ b/master.html
@@ -77,9 +77,9 @@
             <div class="profile-col-1">
                 <h5> THIS IS ME</h5>
                 <h1> ISMET SARI</h1>
-                <p>You will begin to realise why this exercise is called the Dickens Pattern with reference to the ghost showing Scrooge some different futures.</p>
+                <p> Hey!!. I am Senior undergraduate student at Boğaziçi University. I have been working at Intertech as software engineer intern, living in Istanbul/Turkey.</p>
                 <div class="header-buttons">
-                    <button onclick="window.location.href = 'http://ismetsari.ml/chat.html'" type= "button">
+                    <button onclick="window.location.href = 'http://localhost:8081/chat.html'" type= "button">
                         Let's Talk
                     </button>
                     
