--- a/master.html
+++ b/master.html
@@ -234,19 +234,40 @@
         <div class="container">
             <div class="card-post" data-aos="fade-up">
                 <div class="card-post-img">
+                    <img src="images/commencis.jpg" alt="">
+                    </img>
+                </div>
+                <div class="card-post-info">
+                    <div class="card-post-date">
+                        <span>Start : 03.08.2021</span>
+                        <span> Present </span>
+                    </div>
+                    <h1 class="card-post-title">
+                        Commencis
+                    </h1>
+                    <p class= card-post-text>
+                        I am one of the backend engineers in the <a href="https://www.dataroid.com/">Dataroid</a> team.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="card-post" data-aos="fade-up">
+                <div class="card-post-img">
                     <img src="images/intertech.png" alt="">
                     </img>
                 </div>
                 <div class="card-post-info">
                     <div class="card-post-date">
-                        <span>Start : 01.07.2019</span>
-                        <span> Present </span>
+                        <span>Start : 01.09.2020</span>
+                        <span>End : 26.07.2021</span>
                     </div>
                     <h1 class="card-post-title">
                         Intertech
                     </h1>
                     <p class= card-post-text>
-                       Currently, I have been working for Intertech as long term intern for 6 months. I am responsible for implementing the frontend pages using TypeScript and React. The pages are mainly about bank services such as creating user accounts , making payments and checking limits of users. Besides, we are implementing the backend parts using .Net to run the services running on background.
+                       I was responsible for implementing the frontend pages using TypeScript and React. The pages were mainly about bank services such as creating user accounts, making payments and checking limits of users. Besides, we were implementing the Gateways using .Net to run the services running on background.
                     </p>
 
                 </div>
